# xssforge

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: __init__.py
xssforge/: __init__.py  adaptive_scanner.py  bav.py  browser.py  cli.py  config.py  context.py  crawler.py  dom_miner.py  dom_xss.py  filter_analyzer.py  game_solver.py  hunter.py  remote_payloads.py  scanner.py  smart_hunter.py  xscan.py
xssforge/blind/: __init__.py  payloads.py  server.py
xssforge/bypasses/: __init__.py  csp.py  dom_clobbering.py  filters.py  mxss.py
xssforge/detectors/: __init__.py  dom.py  reflected.py  stored.py
xssforge/payloads/: __init__.py  generator.py  loader.py  smart_selector.py  ultimate.py
xssforge/payloads/data/: bypasses.json  events.json  tags.json
xssforge/reporter/: __init__.py  html_report.py  json_report.py  markdown_report.py
xssforge/utils/: __init__.py  encoding.py  http.py
xssforge/validation/: __init__.py
xssforge/waf/: __init__.py  bypass.py  evasion.py  fingerprint.py
