[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xssforge"
version = "1.0.0"
description = "A general-purpose XSS vulnerability scanner for security researchers and bug bounty hunters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ds-sec162"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
keywords = ["xss", "security", "penetration-testing", "web-security", "vulnerability-scanner"]

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
xssforge = "xssforge.cli:main"

[project.urls]
Homepage = "https://github.com/ds-sec162/xssforge"
Repository = "https://github.com/ds-sec162/xssforge"
Issues = "https://github.com/ds-sec162/xssforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xssforge*"]

[tool.setuptools.package-data]
xssforge = ["payloads/data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
